# matrix-synapse-testutils

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  release_pypi.yml
matrix_synapse_testutils/: server.py  unittest.py  utils.py
matrix_synapse_testutils/rest/client/: utils.py
matrix_synapse_testutils/test_utils/: oidc.py
